--- a/SCSS/_mixins.scss
+++ b/SCSS/_mixins.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     height: 250px;
     box-shadow: 0px 20px 80px -8px $text-color-md;
+    transition: all 0.3s linear;
 }
 
 @mixin child {
@@ -13,6 +14,7 @@
     height: inherit;
     padding: 20px;
     border-radius: 0px 0px 10px 10px;
+    transition: all 0.3s linear;
 }
 
 @mixin child-header {
